[package]
name    = "ulid"
publish = false
version = "0.1.5"

edition      = "2021"
rust-version = "1.81.0"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg15"]
pg14    = ["pgrx-tests/pg14", "pgrx/pg14"]
pg15    = ["pgrx-tests/pg15", "pgrx/pg15"]
pg16    = ["pgrx-tests/pg16", "pgrx/pg16"]
pg17    = ["pgrx-tests/pg17", "pgrx/pg17"]
pg_test = []

[dependencies]
inner_ulid = { package = "ulid", version = "1.1.3" }
pgrx       = "0.12.7"

[dev-dependencies]
pgrx-tests = "0.12.7"

[profile.dev]
panic = "unwind"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "unwind"
